--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <img src="../images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header"></img>
+      <h1 class="header__titel">Научиться учиться</h1>
+      <h2 class="header__subtitel">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link">Узнать →</a>
+      </h2>
+      <img src="../images/header-image.png" alt="Главная иллюстрация" class="header__main-illustration"></img>
+      <div class="header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
