--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="../images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header"></img>
-      <h1 class="header__titel">Научиться учиться</h1>
-      <h3 class="header__subtitel">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header"></img>
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
-      </h3>
-      <img src="../images/header-image.png" alt="Главная иллюстрация" class="header__main-illustration"></img>
+      </h2>
+      <img src="./images/header-image.png" alt="Главная иллюстрация" class="header__main-illustration"></img>
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -71,6 +71,10 @@
       </section>
 
       <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <img src="./images/feynman.png" alt="Фейнман" class="feynman__img"></img>
       </section>
 
       <section class="kaufman">
