--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header"></img>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
@@ -127,7 +127,28 @@
       </section>
     </main>
     <footer class="footer">
-
+      <div class="footer__columns">
+    		<div class="footer__column footer__column_content_copyright">
+    			<div class="logo_place_footer"></div>
+    			<p class="footer__author">&copy; 2019. Виктор Абанькин</p>
+    		</div>
+    		<div class="footer__column footer__column_social_info">
+    			<h5 class="footer__column-heading">О Практикуме</h5>
+    			<div class="footer__column-links">
+    				<a href="#" class="footer__column-link">Главная</a>
+    				<a href="#" class="footer__column-link"></img>Концепция</a>
+    				<a href="#" class="footer__column-link"></img>Наставники</a>
+    			</div>
+    		</div>
+    		<div class="footer__column footer__column_content_social">
+    			<h5 class="footer__column-heading">Соцсети</h5>
+    			<div class="footer__column-links">
+    				<a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon"></img>Facebook</a>
+    				<a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
+    				<a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram</a>
+    			</div>
+    		</div>
+    	</div>
     </footer>
   </div>
 </body>
