--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать &rarr;</a>
       </h2>
-      <img src="./images/header-image.png" alt="Главная иллюстрация" class="header__main-illustration"></img>
+      <img src="./images/header-image.png" alt="Главная иллюстрация" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -75,7 +75,7 @@
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img src="./images/feynman.png" alt="Фейнман" class="feynman__img"></img>
+        <img src="./images/feynman.png" alt="Фейнман" class="feynman__img">
       </section>
 
       <section class="kaufman">
@@ -136,14 +136,14 @@
     			<h5 class="footer__column-heading">О Практикуме</h5>
     			<div class="footer__column-links">
     				<a href="#" class="footer__column-link">Главная</a>
-    				<a href="#" class="footer__column-link"></img>Концепция</a>
-    				<a href="#" class="footer__column-link"></img>Наставники</a>
+    				<a href="#" class="footer__column-link">Концепция</a>
+    				<a href="#" class="footer__column-link">Наставники</a>
     			</div>
     		</div>
     		<div class="footer__column footer__column_content_social">
     			<h5 class="footer__column-heading">Соцсети</h5>
     			<div class="footer__column-links">
-    				<a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon"></img>Facebook</a>
+    				<a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook</a>
     				<a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
     				<a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram</a>
     			</div>
