Исправлены критические ошибки

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img src="./images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
@@ -134,11 +134,11 @@
     		</div>
     		<div class="footer__column footer__column_social_info">
     			<h5 class="footer__column-heading">О Практикуме</h5>
-    			<div class="footer__column-links">
+    			<nav class="footer__column-links">
     				<a href="#" class="footer__column-link">Главная</a>
     				<a href="#" class="footer__column-link">Концепция</a>
     				<a href="#" class="footer__column-link">Наставники</a>
-    			</div>
+    			</nav>
     		</div>
     		<div class="footer__column footer__column_content_social">
     			<h5 class="footer__column-heading">Соцсети</h5>
