--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#" class="header__link">Узнать &rarr;</a>
       </h2>
       <img src="./images/header-image.png" alt="Главная иллюстрация" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="rotation header__square-pic"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -166,7 +166,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="rotation kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
