--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
           </li>
         </ul>
       </section>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Изображение книги">
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+          </div>
+        </div>
+      </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
@@ -167,6 +180,16 @@
           </li>
         </ul>
         <div class="rotation kaufman__triangle"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <div class="resources__logo-zone">
+          <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип Арзамас">
+          <img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип N+1">
+          <img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип Полка">
+          <img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип Стрелка">
+        </div>
       </section>
     </main>
     <footer class="footer">
