--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <footer class="footer">
       <div class="footer__columns">
     		<div class="footer__column footer__column_content_copyright">
-    			<div class="logo_place_footer"></div>
+    			<div class="logo logo_place_footer"></div>
     			<p class="footer__author">&copy; 2019. Виктор Абанькин</p>
     		</div>
     		<div class="footer__column footer__column_social_info">
