--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -185,36 +185,36 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип Арзамас">
-          <img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип N+1">
-          <img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип Полка">
-          <img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип Стрелка">
+          <a href="#" class="resources__logo"><img src="./images/resources-arzamas.svg" alt="Логотип Арзамас"></a>
+          <a href="#" class="resources__logo"><img src="./images/resources-n1.svg" alt="Логотип N+1"></a>
+          <a href="#" class="resources__logo"><img src="./images/resources-strelka.svg" alt="Логотип Полка"></a>
+          <a href="#" class="resources__logo"><img src="./images/resources-polka.svg" alt="Логотип Стрелка"></a>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-    		<div class="footer__column footer__column_content_copyright">
-    			<div class="logo logo_place_footer"></div>
-    			<p class="footer__author">&copy; 2019. Виктор Абанькин</p>
-    		</div>
-    		<div class="footer__column footer__column_social_info">
-    			<h5 class="footer__column-heading">О Практикуме</h5>
-    			<nav class="footer__column-links">
-    				<a href="#" class="footer__column-link">Главная</a>
-    				<a href="#" class="footer__column-link">Концепция</a>
-    				<a href="#" class="footer__column-link">Наставники</a>
-    			</nav>
-    		</div>
-    		<div class="footer__column footer__column_content_social">
-    			<h5 class="footer__column-heading">Соцсети</h5>
-    			<div class="footer__column-links">
-    				<a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a>
-    				<a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
-    				<a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a>
-    			</div>
-    		</div>
-    	</div>
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <nav class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </nav>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Фейсбук" class="footer__social-icon">Facebook</a>
+            <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">Instagram</a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
